--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: php
 before_script:
   - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install
+  - php composer.phar install --prefer-source
 script: phpunit --bootstrap vendor/autoload.php --exclude-group suite tests/
 php:
   - 5.3
